# ctapi-rs

./: AGENTS.md  ASYNC_API.md  ASYNC_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TEST_CONFIGURATION.md  THREAD_SAFETY.md  TOKIO_INTEGRATION.md
.github/: copilot-instructions.md
ctapi-rs/: CHANGELOG.md  Cargo.toml
ctapi-rs/src/: async_ops.rs  client.rs  constants.rs  ctapi.rs  error.rs  find.rs  lib.rs  list.rs  scaling.rs  tokio_async.rs  util.rs
ctapi-sys/: Cargo.toml  build.rs
ctapi-sys/lib/x64/: ctapi.h
ctapi-sys/src/: lib.rs
examples/async-demo/: Cargo.toml
examples/async-demo/src/: main.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/list-read/: Cargo.toml
examples/list-read/src/: main.rs
examples/tokio-demo/: Cargo.toml
examples/tokio-demo/src/: main.rs
