[package]
name = "ctapi-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ctapi-sys = { path = "../ctapi-sys", version = "0.1.0" }
encoding_rs = "0.8"
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"], optional = true }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_IO"] }

[dev-dependencies]
chrono = "~0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
tokio-support = ["tokio"]
