[package]
name = "ctapi-rs"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctapi-sys = { path = "../ctapi-sys", version = "0.2.0" }
encoding_rs = "0.8"
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_IO",
] }

[dev-dependencies]
anyhow = "1"
chrono = "~0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
tokio-support = ["tokio"]
