[package]
name = "ctapi-sys"
version = "0.2.0"
authors = ["Cheng Huang <htroyvip@gmail.com>"]
build = "build.rs"
keywords = ["Citect", "CtApi"]

description = """
FFI bindings to the Citect CtApi C library"
"""

edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ctapi_sys"
path = "./src/lib.rs"

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
]
