[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ctapi-rs = { path = "../../ctapi-rs", version = "0.1.0" }
encoding_rs = "0.8"
libc = "0.2"
thiserror = "1"

[dev-dependencies]
chrono = "~0.4"
